--- a/.github/workflows/azure-staticwebapp.yml
+++ b/.github/workflows/azure-staticwebapp.yml
@@ -54,7 +54,7 @@ jobs:
           api_location: ${{ env.API_LOCATION }}
           skip_app_build: true
           skip_api_build: true
-          app_artifact_location: ${{ env.APP_ARTIFACT_LOCATION }}
+          output_location: ${{ env.APP_ARTIFACT_LOCATION }}
           ###### End of Repository/Build Configurations ######
 
   close_pull_request_job:
